add_device endpoint should be post not put
