# python/server/swagger.yml
@@ -256,11 +256,13 @@ paths:
           description: "User not found."
 
   /webapp/{user_id}/add:
-    put:
+    post:
       operationId: "server.webapp.add_device"
       tags:
         - webapp
       summary: "Add a new device for a user"
+      consumes:
+        - "application/x-www-form-urlencoded"
       parameters:
         - in: path
           name: user_id
@@ -268,14 +270,16 @@ paths:
           type: integer
           minimum: 1
           description: "User ID"
-        - in: body
-          name: values
+        - in: formData
+          name: label
           required: false
-          schema:
-            type: object
-            properties:
-              label:
-                type: string
+          type: string
+          description: "(optional) label for newly created device"
+#          schema:
+#            type: object
+#            properties:
+#              label:
+#                type: string
       responses:
         201:
           description: "Successful device add. Returns the new device ID."
